# DuckGUI

./: meson.build
Platform/: Window.cpp  Window.h  meson.build
Tests/: meson.build
Tests/Platform/: WindowTests.cpp
